--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,10 +10,6 @@ permissions:
   pages: write
   id-token: write
 
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -25,13 +21,21 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: 'npm'
-          cache-dependency-path: './portfolio/package-lock.json'
+          # cache 부분 제거
+          
+      - name: Check portfolio structure
+        run: |
+          echo "Repository structure:"
+          ls -la
+          echo "Portfolio folder contents:"
+          ls -la portfolio/
+          echo "Package files:"
+          ls -la portfolio/package*.json || echo "No package files found"
           
       - name: Install dependencies
         run: |
           cd portfolio
-          npm ci
+          npm install  # npm ci 대신 npm install 사용
           
       - name: Configure Next.js for GitHub Pages
         run: |
@@ -57,7 +61,7 @@ jobs:
         uses: actions/configure-pages@v4
         
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
           path: './portfolio/out'
 
@@ -70,4 +74,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v3
+        uses: actions/deploy-pages@v4
